<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_burst_capture">Take burst</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_stopped">Capture stopped</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_imax_too_much_tilt_down">Move up slightly</string>
    <string name="accessibility_imax_too_much_tilt_up">Move down slightly</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_photobooth_shutter_start">Start Photobooth Mode</string>
    <string name="accessibility_photobooth_shutter_stop">Stop Photobooth Mode</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_desc">Autofocus</string>
    <string name="af_option_tooltip">Focus options</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="auto">Auto</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_text">Smartburst</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_menu_settings_label">@string/mode_settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="capture_error">Capture error</string>
    <string name="center">Center</string>
    <string name="cling_text_for_refocus_editor_button">To refocus, tap here</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="complicationDrawable_noDataText">--</string>
    <string name="complicationDrawable_textTypeface">sans-serif-condensed</string>
    <string name="complicationDrawable_titleTypeface">sans-serif-condensed</string>
    <string name="compute_error">Processing error</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="crop_save">Save</string>
    <string name="cuttlefish_capturing_first">Hold still</string>
    <string name="cuttlefish_description">Takes vibrant and bright photos in low light</string>
    <string name="cuttlefish_hold_steady_advice">Hold phone steady</string>
    <string name="cuttlefish_name">Night Sight</string>
    <string name="delete">Delete</string>
    <string name="delete_button_description">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="description">Description</string>
    <string name="detailed_face_announcement">%1$d face. %2$s. %3$s.</string>
    <string name="details">Details</string>
    <string name="details_button_description">Details</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_vr_core_not_enabled">This application may not work properly without enabling Google VR Services, please enable this in phone Settings before continuing.</string>
    <string name="dialog_vr_core_not_installed">This application may not work properly without Google VR Services. Please install Google VR Services from the Play Store before continuing.</string>
    <string name="double_tap_switch_camera">Switch Camera</string>
    <string name="double_tap_zoom">Zoom</string>
    <string name="duration">Duration</string>
    <string name="edit_button_description">Edit</string>
    <string name="edit_with">Edit with</string>
    <string name="error_action_not_found">This app not found on your device.</string>
    <string name="error_camera_device">The camera device encountered a fatal error.</string>
    <string name="error_camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="error_camera_in_use">The camera could not be opened because it is currently in use.</string>
    <string name="error_camera_service">The camera driver encountered a fatal error.</string>
    <string name="error_cannot_connect_camera">"Can't connect to the camera."</string>
    <string name="error_fast_motion">Device moved too fast</string>
    <string name="error_max_cameras_in_use">The camera could not be opened because too many camera devices are already open.</string>
    <string name="error_media_recorder_failure">There was a problem with the media recorder.</string>
    <string name="error_media_storage_failure">There was a problem saving your photo or video.</string>
    <string name="error_permissions_keyguard_updated">To function properly, Camera needs your permission. Unlock your device and go to Settings to allow permission for Camera.</string>
    <string name="error_permissions_updated">To use Camera, first go to Settings and give it the permissions listed there.</string>
    <string name="error_scene">"Can't isolate subject or subject moved"</string>
    <string name="error_slow_motion">"Device moved too slowly
 or scene too far away"</string>
    <string name="error_tracking_failed">"Can't capture this shot"</string>
    <string name="shortcut_selfie_long_label">Take a selfie</string>
    <string name="shortcut_selfie_short_label">Selfie</string>
    <string name="shortcut_video_long_label">Take a video</string>
    <string name="shortcut_video_short_label">Video</string>
</resources>